# microlog

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  kolibrios-build.yml  static.yml
examples/: CMakeLists.txt  example.cpp
include/microlog/: microlog.hpp
src/: microlog.cpp
tests/: CMakeLists.txt  test.cpp
